--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
 	"license": "MIT",
 	"scripts": {
 		"build": "tsc",
-    	"build:check": "tsc --noEmit",
-    	"clean": "rm -rf dist",
-    	"prepare": "npm run clean && npm run build"
+		"build:check": "tsc --noEmit",
+		"clean": "rm -rf dist",
+		"prepare": "npm run clean && npm run build"
 	},
 	"publishConfig": {
 		"access": "public"
 	},
 	"devDependencies": {
+		"tslib": "^2.3.1",
 		"typescript": "^4.4.4"
 	}
 }
