--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
 		"access": "public"
 	},
 	"devDependencies": {
+		"ts-loader": "^9.2.6",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.4"
+		"typescript": "^4.4.4",
+		"webpack": "^5.63.0",
+		"webpack-cli": "^4.9.1"
 	}
 }
