--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,7 +3,7 @@ name: Docs
 on: [push, pull_request]
 
 jobs:
-  build_and_lint:
+  docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
