--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,18 +12,18 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
 
-      - name: Retrieve the cached "node_modules" directory (if present)
-        uses: actions/cache@v2
-        id: node-cache
-        with:
-          path: node_modules
-          key: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+      # - name: Retrieve the cached "node_modules" directory (if present)
+      #   uses: actions/cache@v2
+      #   id: node-cache
+      #   with:
+      #     path: node_modules
+      #     key: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies (if the cached directory was not found)
-        if: steps.node-cache.outputs.cache-hit != 'true'
+        # if: steps.node-cache.outputs.cache-hit != 'true'
         run: |
-          npm install
           npm install -g typescript
+          npm install
 
       - name: Test to see if the project compiles
         run: npm run build:check
