--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"scripts": {
 		"build": "tsc",
 		"build:check": "tsc --noEmit",
+		"docs": "typedoc src/index.ts",
 		"clean": "rm -rf dist",
 		"prepare": "npm run clean && npm run build"
 	},
@@ -22,6 +23,7 @@
 	"devDependencies": {
 		"ts-loader": "^9.2.6",
 		"tslib": "^2.3.1",
+		"typedoc": "^0.22.8",
 		"typescript": "^4.4.4",
 		"webpack": "^5.63.0",
 		"webpack-cli": "^4.9.1"
