--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"scripts": {
 		"build": "tsc",
 		"build:check": "tsc --noEmit",
-		"docs": "typedoc src/index.ts",
+		"docs": "typedoc --excludePrivate --excludeProtected src/index.ts",
 		"clean": "rm -rf dist",
 		"prepare": "npm run clean && npm run build"
 	},
