--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"scripts": {
 		"build": "tsc",
 		"build:check": "tsc --noEmit",
+		"lint": "eslint . --ext .js,.ts",
 		"docs": "typedoc --excludePrivate --excludeProtected src/index.ts",
 		"clean": "rm -rf dist",
 		"prepare": "npm run clean && npm run build"
@@ -21,12 +22,14 @@
 		"access": "public"
 	},
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.4.0",
+		"@typescript-eslint/parser": "^5.4.0",
+		"eslint": "^8.3.0",
 		"ts-loader": "^9.2.6",
 		"tslib": "^2.3.1",
 		"typedoc": "^0.22.8",
-		"typescript": "^4.4.4",
+		"typescript": "^4.5.2",
 		"webpack": "^5.63.0",
 		"webpack-cli": "^4.9.1"
-	},
-	"dependencies": {}
+	}
 }
