--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"@typescript-eslint/eslint-plugin": "^5.4.0",
 		"@typescript-eslint/parser": "^5.4.0",
 		"eslint": "^8.3.0",
+		"eslint-config-prettier": "^8.3.0",
+		"prettier": "^2.5.0",
 		"ts-loader": "^9.2.6",
 		"tslib": "^2.3.1",
 		"typedoc": "^0.22.8",
