Added linting check to workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,5 @@ jobs:
       - name: Test to see if the project compiles
         run: npm run build:check
 
-
+      - name: Check code formatting with ESLint
+        run: npm run lint:check
