--- a/package.json
+++ b/package.json
@@ -28,11 +28,8 @@
 		"eslint": "^8.3.0",
 		"eslint-config-prettier": "^8.3.0",
 		"prettier": "^2.5.0",
-		"ts-loader": "^9.2.6",
 		"tslib": "^2.3.1",
-		"typedoc": "^0.22.8",
-		"typescript": "^4.5.2",
-		"webpack": "^5.63.0",
-		"webpack-cli": "^4.9.1"
+		"typedoc": "^0.22.18",
+		"typescript": "^4.5.2"
 	}
 }
