--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,22 +4,54 @@ on:
 
 name: Release
 
+permissions:
+  contents: write
+
 jobs:
-  release:
+  goreleaser:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      -
-        uses: actions/setup-node@v1
+
+      - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.2.2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          distribution: goreleaser
+          version: latest
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: actions/setup-node@v1
         with:
           node-version: 10
-      -
-        run: npm install
-      -
-        uses: JS-DevTools/npm-publish@v1
+
+      - name: Update version in package.json
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            const packageJson = JSON.parse(fs.readFileSync('package.json', 'utf8'));
+            packageJson.version = '${{ steps.get_release.outputs.tag_name }}'.replace(/^v/, '');
+            fs.writeFileSync('package.json', JSON.stringify(packageJson, null, 2));
+
+      - run: npm install
+
+      - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
