chore: run unit tests in gha

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Check code formatting with ESLint
         run: npm run lint:check
+
+      - name: Unit tests
+        run: npm run test
