fix build and test errors

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install -g typescript
-          npm install
+          npm ci
 
       - name: Test to see if the project compiles
         run: npm run build:check
