--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"build:check": "tsc --noEmit",
 		"lint": "prettier --write . && eslint . --ext .js,.ts --fix",
 		"lint:check": "prettier --check . && eslint . --ext .js,.ts",
+		"test": "jest",
 		"docs": "typedoc --excludePrivate --excludeProtected src/index.ts",
 		"clean": "rm -rf dist",
 		"prepare": "npm run clean && npm run build"
@@ -23,11 +24,15 @@
 		"access": "public"
 	},
 	"devDependencies": {
+		"@types/jest": "^29.5.12",
+		"@types/node": "^20.10.0",
 		"@typescript-eslint/eslint-plugin": "^5.4.0",
 		"@typescript-eslint/parser": "^5.4.0",
 		"eslint": "^8.3.0",
 		"eslint-config-prettier": "^8.3.0",
+		"jest": "^29.7.0",
 		"prettier": "^2.5.0",
+		"ts-jest": "^29.1.5",
 		"tslib": "^2.3.1",
 		"typedoc": "^0.22.18",
 		"typescript": "^4.5.2"
